# example_plugin

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  action.yml  driver.cpp  driver.hpp  driver_advanced.cpp  driver_advanced.hpp  example_plugin.cpp  example_plugin.hpp  helper.cpp  helper.hpp  index_tuner.cpp  index_tuner.hpp  index_tuner_advanced.cpp  index_tuner_advanced.hpp  plan_cache_csv_exporter.cpp  plan_cache_csv_exporter.hpp  run_benchmark_based_calibration.sh  run_faulty_ch_benchmark.sh  workload_predictor.cpp  workload_predictor.hpp
.github/workflows/: main.yml
test/: test_plugin.sh
